--- a/README.rdoc
+++ b/README.rdoc
@@ -123,7 +123,8 @@ model_translations will detect if the column is translated or not and perform th
 
 == TODO
 
-  - Create a standalone test environment to test plugin outside of rails
+* Create a standalone test environment to test plugin outside of rails
 
 Copyright (c) 2008 Jan Andersson, released under the MIT license
+
 Copyright (c) 2010 Curt Hasselschwert, released under the MIT license
