--- a/README.rdoc
+++ b/README.rdoc
@@ -111,12 +111,12 @@ This returns an array of strings containing the locales for which a translation 
 
 == Validating unique translated fields
 
-To validate the uniqueness of a translated field, use +validates_uniqueness_of+ as normal.
+To validate the uniqueness of a translated field, use +validates_uniqueness_of_translated+.
 
   class Post < ActiveRecord::Base
     translates :title
     
-    validates_uniqueness_of :title
+    validates_uniqueness_of_translated :title
   end
   
 model_translations will detect if the column is translated or not and perform the required validation.
